// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly as converging gateway with minimal props 1`] = `
<Fragment>
  <Component
    editMenu={[Function]}
    elementTypeClassName="gateway-element converging"
    onClick={[Function]}
    referenceElement={FlowElementReference { "id": "following-element-id" }}
  />
  <HorizontalStroke
    optional={true}
  />
</Fragment>
`;

exports[`renders correctly as diverging gateway with minimal props 1`] = `
<Fragment>
  <Component
    editMenu={[Function]}
    elementTypeClassName="gateway-element diverging"
    onClick={[Function]}
    referenceElement={FlowElementReference { "id": "gateway-id" }}
  />
  <HorizontalStroke
    editMenu={[Function]}
    gatewayId="gateway-id"
    onSelect={[Function]}
  >
    text
  </HorizontalStroke>
</Fragment>
`;
